[package]
name = "rk-convert"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
byteorder = "1.3.2"
zstd = "0.4.14"
png = "0.15"
libc = "0.2"
sdl2 = "0.34.5"
gl = "0.14.0"
nalgebra = "0.25.4"
csv = "1.1.6"
gltf-json = { version = "1.0.0", features = ["names", "KHR_materials_unlit"] }

[build-dependencies]
cc = "1.0.79"
